# Tag_system

./: .gitignore  README.md
Arduino/: servo_motors.cpp
Dependencies/docker/: Dockerfile
RPI/src/install/: local_setup.sh  setup.bash  setup.ps1
RPI/src/launch_pkg/: package.xml  setup.py
RPI/src/launch_pkg/launch/: start_all.py
RPI/src/pkg_antenna_modus/: package.xml  setup.cfg
RPI/src/pkg_antenna_modus/pkg_antenna_modus/: antenna_modus_node.py
RPI/src/pkg_img/: setup.py
RPI/src/pkg_img/pkg_img/: camera_node.py
RPI/src/pkg_system_checker/: package.xml  setup.cfg
RPI/src/spi_comm/: SPI_LED_test.py  SPI_Test_code.py  SPI_code.py  STM32_SPI_test.cpp
STM32/Tag_system/: platformio.ini
STM32/Tag_system/include/: pindefines.h
STM32/Tag_system/src/: SPI slave STM met comentaar (niet getest).c  STM32_SPI_Slave (werkt nu alleen met STM32cubeIDE).c  main.cpp  main_arduino.cpp  main_nucleo.cpp
install/: local_setup.sh  setup.sh
install/launch_pkg/share/launch_pkg/: package.sh
install/pkg_antenna_modus/lib/pkg_antenna_modus/: antenna_modus_node
install/pkg_antenna_modus/share/pkg_antenna_modus/: package.sh
install/pkg_img/lib/pkg_img/: cam_publisher
install/pkg_img/share/pkg_img/: package.sh
install/pkg_system_checker/lib/pkg_system_checker/: check_system
log/: latest_build  latest_list
src/install/: setup.sh  setup.zsh
src/install/pkg_img/share/pkg_img/: package.bash  (+3 more)
src/log/: latest_build
src/pkg_antenna_modus/: setup.py
src/pkg_img/: package.xml  setup.cfg
src/pkg_img/pkg_img/: image_view.py
src/pkg_system_checker/: setup.py
(+13 files in other folders)
