<?xml version="1.0"?>
<package format="3">
  <name>pkg_system_checker</name>
  <version>0.0.0</version>
  <description>A small package to check required ROS2 nodes/topics at launch</description>

  <!-- Change “your_name” and “your_email@example.com” to your actual name/email: -->
  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>Apache License 2.0</license>

  <!-- We’re using ament_python to build, so this stays: -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- We wrote our node in rclpy, so we need rclpy here: -->
  <exec_depend>rclpy</exec_depend>

  <!-- We referenced std_msgs only as an example; if you don’t actually use it, you can remove it: -->
  <exec_depend>std_msgs</exec_depend>

  <!-- If, in the future, your checker node uses other message types or packages, add them here as <exec_depend>pkg_name</exec_depend> -->

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
